plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    maven {
        url 'https://dl.equo.dev/middleware/mvn/release'
    }
    maven {
        url 'https://dl.equo.dev/chromium-swt-ee/equo/mvn'
    }
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation('com.equo:com.equo.chromium') {
        version {
            strictly('106.0.0-SNAPSHOT')
        }
    }
    implementation 'com.equo:com.equo.middleware.bom:1.3.4'
    implementation 'org.apache.felix:org.apache.felix.framework:7.0.5'
    implementation 'org.apache.felix:org.apache.felix.atomos:1.0.0'
    runtimeOnly 'org.eclipse.platform:org.eclipse.osgi.services:3.11.100'
    runtimeOnly 'org.eclipse.platform:org.eclipse.osgi.util:3.7.200'
    runtimeOnly 'org.apache.felix:org.apache.felix.scr:2.2.6'
    runtimeOnly 'com.equo:com.equo.chromium.cef.gtk.linux.x86_64:106.0.0-SNAPSHOT'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    testImplementation 'org.mockito:mockito-core:5.7.0'
}

test {
    useJUnitPlatform()
}

sourceCompatibility = 11
targetCompatibility = 11

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId "com.equo"
            artifactId "com.equo.${rootProject.name}"
            version "0.1-SNAPSHOT"
        }
    }
}
